--- a/index.html
+++ b/index.html
@@ -7,10 +7,12 @@
     </head>
     <body>
             <div class ="publicacion">
+                <img class ="profile" src="https://image.flaticon.com/icons/svg/1216/1216909.svg">
                 <p class="title">HTML5</p>
                 <p class="number">...</p>
-                <img src="https://cdnpt01.viewbug.com/media/mediafiles/2013/12/28/5864041_large1300.jpg">
-                <p class="comentario">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit labortis nisl ut aliquip ex ea <b>#BreatheCode</b></p>
+                <img class ="post" src="https://cdnpt01.viewbug.com/media/mediafiles/2013/12/28/5864041_large1300.jpg">
+                <p class="comentario">Linked by <b>4GeeksAcademy, html5, Web</b> and <b>100,000 other</b></p>
+                <p class="comentario">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit labortis nisl ut aliquip ex ea conmmodo consequat.</p>
             </div>
     </body>
 </html>
