--- a/index.html
+++ b/index.html
@@ -1,18 +1,39 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Photo Feed</title>
+
+<head>
+	<title>Instagram Post</title>
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+        integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf"
+        crossorigin="anonymous">
+	<link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
     <link href="style.css" rel="stylesheet" type="text/css">
-    <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
-    </head>
-    <body>
-            <div class ="publicacion">
-                <img class ="profile" src="https://image.flaticon.com/icons/svg/1216/1216909.svg">
-                <p class="title">HTML5</p>
-                <p class="number">...</p>
-                <img class ="post" src="https://cdnpt01.viewbug.com/media/mediafiles/2013/12/28/5864041_large1300.jpg">
-                <p class="comentario">Linked by <b>4GeeksAcademy, html5, Web</b> and <b>100,000 other</b></p>
-                <p class="comentario">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit labortis nisl ut aliquip ex ea conmmodo consequat.</p>
-            </div>
-    </body>
+</head>
+
+<body>
+	<div class="publicacion">
+<div class="header">
+    <div class="icons">
+        <i class="fab fa-html5"></i>
+        <div id="name_profile" >
+    	<p class="title">HTML5</p>
+        <spam>Rigoberto</spam>
+        </div>
+		<i id="icon_option" class="fas fa-ellipsis-v"></i>
+    </div>
+</div>
+        <img class ="post" src="https://cdnpt01.viewbug.com/media/mediafiles/2013/12/28/5864041_large1300.jpg">
+<div class="icons">
+    	<i class="far fa-heart"></i>
+        <i class="far fa-comment"></i>
+        <i class="far fa-paper-plane"></i>
+        <i id ="bookmark" class="far fa-bookmark"></i>
+</div>
+        <p class="comentario">Linked by <b>4GeeksAcademy, html5, Web</b> and <b>100,000 other</b></p>
+		<p class="comentario">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh
+			euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. ut wisi enim ad minim veniam, quis
+			nostrud exerci tation ullamcorper suscipit labortis nisl ut aliquip ex ea conmmodo consequat.</p>
+	</div>
+</body>
+
 </html>
